# mem0-shield

./: .gitignore  AGENTS.md  README.md  pyproject.toml
cli/: demo.py
examples/: basic_usage.py  healthcare_agent.py
mem0shield/: __init__.py  config.py  exceptions.py  models.py  shield.py
mem0shield/pipeline/: __init__.py  auditor.py  contradiction.py  flood.py  identity.py  injection.py  scorer.py
tests/: conftest.py
tests/red_team/: __init__.py  test_contradiction.py  test_flood.py  test_identity.py  test_injection.py  test_temporal.py
tests/unit/: __init__.py  test_auditor.py  test_scanner.py
